feat: new api endpoint for service updates
  - Model, backend, cli command
  - Manually checked the functionality, with and without a bound app.
  - Tests for cli command and API.
